piggy back on chart.js, use all their charts directly

--- a/src/main/resources/allure-plugin.yml
+++ b/src/main/resources/allure-plugin.yml
@@ -3,7 +3,7 @@ name: Graph tabs
 description: Adds tabs specified by the file name to the report that include various graphs
 jsFiles:
   - GraphGridView.js
-  - PieChartView.js
+  - ChartView.js
   - GraphLayout.js
   - index.js
 cssFiles:
